@@ -7,4 +7,5 @@ export(belplau)
 export(decode)
 export(dotprod)
 export(doubles)
+export(dsrwon)
 export(plautrans)
