@@ -1,33 +1,44 @@
+% Generated by roxygen2: do not edit by hand
+% Please edit documentation in R/dsrwon.R
 \name{dsrwon}
 \alias{dsrwon}
-\title{dsrwon : Combination of two belief functions using Dempster's rule of combination, without normalization}
+\title{Combination of two belief functions}
 \usage{
-  dsrwon(x, y)
+dsrwon(x, y, infovar = NULL, relnb = NULL)
 }
 \arguments{
-  \item{x}{List of two elements in bca (basic chances assignment) form (bca on M focal elements and the measure of conflict between beliefs.}
-  \item{y}{List of two elements in bca form (bca on N focal elements and the measure of conflict between beliefs.}
-}
-\description{
-  Two belief functions are combined by the Dempster's rule. The first element of the lists contains the tables to combine, which are the matrix of focal elements plus the masses in column 1.
-}
-\details{
-Each row of the tables identify a proposition (a subset of the frame of discernment) by a vector of (0,1) plus a mass in the (0,1] interval. A function (inters) does the intersection of the propositions. Another function (combmasses) does the product of the vectors of masses. Finally, a function (doubles) cleans the intersection of the duplicate elements.
+\item{x}{A belief function in its bca form (see \code{\link{bca}}).}
+
+\item{y}{A belief function represented by its bca form.}
+
+\item{infovar}{A two column matrix containing the variable numbers and the size of the product frame of discernment of each variable.}
+
+\item{relnb}{Set at NULL.}
 }
 \value{
-The result is a list of four elements:\cr
-  1: un-normalized Dempster's rule of combination;\cr
-  2: a table of intersections;\cr
-  3: indices for the sort of the propositions;\cr
-  4: the measure of conflict between beliefs.
+A list of five elements: \itemize{
+  \item $combination: The matrix f of focal elements with a column of masses added.
+  \item $I12 A table of intersections between subsets.
+  \item $sort_order Indices for the sort of the propositions.
+  \item $con: the measure of conflict between beliefs.
+  \item $n: the node number.
+ \item $inforel. A two column matrix containing variable numbers and the depth of the relation.
+  }
+}
+\description{
+The unnormalized Dempster's rule is used to combine two belief functions Bel1 and Bel2 defined on the same frame of discernment and represented by their respective basic chance assignments \code{x} and \code{y}. Dempster's rule of combination is applied. The normalization is not done, leaving the choice to the user to normalize the results (See \code{\link{nzdsr}}) or not.
+}
+\details{
+A function (inters) does the intersection of the propositions. Another function (doubles) remove duplicate elements from the result of the intersection of the M propositions of the first bca with the N propositions of the second bca. The two bcas \code{a} and \code{b} must be defined on the same frame of discernment for the intersection of propositions to be meaningful.
+}
+\examples{
+x <- bca(f=matrix(c(0,1,1,1,1,0,1,1,1),nrow=3, byrow = TRUE), m=c(0.2,0.5, 0.3), cnames =c("a", "b", "c"), n=1)
+y <- bca(f=matrix(c(1,0,0,1,1,1),nrow=2, byrow = TRUE), m=c(0.6, 0.4),  cnames = c("a", "b", "c"), n=1)
+dsrwon(x,y)
+}
+\references{
+Shafer, G., (1976). A Mathematical Theory of Evidence. Princeton University Press, Princeton, New Jersey, p. 57-61: Dempster's rule of combination.
 }
 \author{
 Claude Boivin, Stat.ASSQ
-}
-\examples{
- ## Not run:  
-x<-list(DempsterRule=matrix(c(.2,.5,.3,0,0,1,1,1,1,0,1,1),nrow=3),con=0)
-y<-list(DempsterRule=matrix(c(.4,.6,0,1,0,1,1,1),nrow=2),con=0)
-dsrwon(x,y)
-## End(Not run)
 }
